samples/ingress/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: php-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: 134.209.130.122.nip.io 
    http:
      paths:
      - backend:
          service:
            name: php-apache
            port:
              number: 80
        path: /apache(/|$)(.*)
        pathType: Prefix
status:
  loadBalancer: {}
