samples/ingress/test2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  creationTimestamp: null
  name: testing2
spec:
  rules:
  - host: 134.209.130.122.nip.io
    http:
      paths:
      - backend:
          service:
            name: php-apache
            port:
              number: 80
        path: /test(/|$)(.*)
        pathType: Exact
status:
  loadBalancer: {}
